# TRADE-md

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DSL.md  SPEC.md  WORKFLOW.md
examples/: backtest_config.json
examples/adx-smas/: TRADE.md
examples/heritage-rsi-ema/: TRADE.md
examples/heritage-rsi-ema-v02/: TRADE.md
examples/heritage-rsi-ema-v02/indicators/: sep_score.py
examples/macd-ema/: TRADE.md
ported/: AdxSmas.py  BbandsRsi.py
ported/bbands-rsi/: TRADE.md
ported/macd-ema/: MacdEma.py
skills/trade-md-workflow/: SKILL.md
src/trade_md/: __init__.py  __main__.py  cli.py  explain.py  expr.py  indicator.py  linter.py  params.py  parser.py
src/trade_md/compilers/: __init__.py  freqtrade.py
src/trade_md/contrib/: __init__.py  alligator_jaw.py  alligator_lips.py  alligator_teeth.py  aroon_down.py  aroon_osc.py  aroon_up.py  bb_kc_squeeze.py  cci.py  chop.py  dmi_minus_di.py  dmi_plus_di.py  donchian_lower.py  donchian_middle.py  donchian_upper.py  kama.py  kc_lower.py  kc_upper.py  linreg_momentum.py  luxalgo_momentum.py  sar.py  supertrend.py  supertrend_direction.py  vwap.py
tests/: conftest.py  test_cli.py  test_compiler_freqtrade.py  test_explain.py  test_expr.py  test_indicator.py  test_linter.py  test_params.py  test_parser.py
tests/fixtures/: bad_indicator.py  broken.TRADE.md
tests/fixtures/strategy_dir/: TRADE.md
tests/fixtures/strategy_dir/indicators/: test_ind.py
